--- a/project.ipynb
+++ b/project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -302,6 +302,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "db = client['player_valuations']\n",
+    "collection = db['players']\n",
+    "res = collection.find()\n",
+    "\n",
+    "df =  pd.DataFrame(list(res))\n",
+    "df.drop(\"_id\", axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-------------+------------------------+----------------+----------------------+------------------------------------+---------------+--------------------+-------------+----------+-----+------------+---------------------------+--------------------+---------+-----------+-------------------+--------------+--------------+---------+--------+--------------+--------------------+\n",
+      "|          agent_name|city_of_birth|contract_expiration_date|country_of_birth|country_of_citizenship|current_club_domestic_competition_id|current_club_id|   current_club_name|date_of_birth|first_name| foot|height_in_cm|highest_market_value_in_eur|           image_url|last_name|last_season|market_value_in_eur|          name|   player_code|player_id|position|  sub_position|                 url|\n",
+      "+--------------------+-------------+------------------------+----------------+----------------------+------------------------------------+---------------+--------------------+-------------+----------+-----+------------+---------------------------+--------------------+---------+-----------+-------------------+--------------+--------------+---------+--------+--------------+--------------------+\n",
+      "|ASBW Sport Marketing|        Opole|                        |          Poland|               Germany|                                 IT1|            398|Società Sportiva ...|   1978-06-09|  Miroslav|right|         184|                   30000000|https://img.a.tra...|    Klose|       2015|            1000000|Miroslav Klose|miroslav-klose|       10|  Attack|Centre-Forward|https://www.trans...|\n",
+      "+--------------------+-------------+------------------------+----------------+----------------------+------------------------------------+---------------+--------------------+-------------+----------+-----+------------+---------------------------+--------------------+---------+-----------+-------------------+--------------+--------------+---------+--------+--------------+--------------------+\n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "ss = SparkSession.builder.master(\"local[*]\").getOrCreate()\n",
+    "\n",
+    "player_valuation_df=ss.createDataFrame(df)\n",
+    "appearances_df = ss.read.csv(\"raw_data\\\\transfermarkt\\\\appearances.csv\", header=True, inferSchema=True)\n",
+    "players_df = ss.read.option(\"multiline\",\"true\").json(\"raw_data\\\\transfermarkt\\\\players.json\")\n",
+    "players_df.show(1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -310,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +373,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -342,6 +388,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "88279d2366fe020547cde40dd65aa0e3aa662a6ec1f3ca12d88834876c85e1a6"
+   }
   }
  },
  "nbformat": 4,
