added stop spark session

--- a/project.ipynb
+++ b/project.ipynb
@@ -319,114 +319,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py\", line 3526, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Local\\Temp\\ipykernel_3028\\802236825.py\", line 7, in <module>\n",
-      "    df = ss.read.format(\"com.mongodb.spark.sql.DefaultSource\").load()\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"d:\\Anaconda\\Lib\\site-packages\\pyspark\\sql\\readwriter.py\", line 314, in load\n",
-      "    return self._df(self._jreader.load())\n",
-      "                    ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"d:\\Anaconda\\Lib\\site-packages\\py4j\\java_gateway.py\", line 1322, in __call__\n",
-      "    return_value = get_return_value(\n",
-      "                   ^^^^^^^^^^^^^^^^^\n",
-      "  File \"d:\\Anaconda\\Lib\\site-packages\\pyspark\\errors\\exceptions\\captured.py\", line 179, in deco\n",
-      "    return f(*a, **kw)\n",
-      "           ^^^^^^^^^^^\n",
-      "  File \"d:\\Anaconda\\Lib\\site-packages\\py4j\\protocol.py\", line 326, in get_return_value\n",
-      "    raise Py4JJavaError(\n",
-      "py4j.protocol.Py4JJavaError: An error occurred while calling o98.load.\n",
-      ": org.apache.spark.SparkClassNotFoundException: [DATA_SOURCE_NOT_FOUND] Failed to find the data source: com.mongodb.spark.sql.DefaultSource. Please find packages at `https://spark.apache.org/third-party-projects.html`.\n",
-      "\tat org.apache.spark.sql.errors.QueryExecutionErrors$.dataSourceNotFoundError(QueryExecutionErrors.scala:724)\n",
-      "\tat org.apache.spark.sql.execution.datasources.DataSource$.lookupDataSource(DataSource.scala:647)\n",
-      "\tat org.apache.spark.sql.execution.datasources.DataSource$.lookupDataSourceV2(DataSource.scala:697)\n",
-      "\tat org.apache.spark.sql.DataFrameReader.load(DataFrameReader.scala:208)\n",
-      "\tat org.apache.spark.sql.DataFrameReader.load(DataFrameReader.scala:172)\n",
-      "\tat sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
-      "\tat sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
-      "\tat sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
-      "\tat java.lang.reflect.Method.invoke(Method.java:498)\n",
-      "\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
-      "\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:374)\n",
-      "\tat py4j.Gateway.invoke(Gateway.java:282)\n",
-      "\tat py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
-      "\tat py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
-      "\tat py4j.ClientServerConnection.waitForCommands(ClientServerConnection.java:182)\n",
-      "\tat py4j.ClientServerConnection.run(ClientServerConnection.java:106)\n",
-      "\tat java.lang.Thread.run(Thread.java:750)\n",
-      "Caused by: java.lang.ClassNotFoundException: com.mongodb.spark.sql.DefaultSource.DefaultSource\n",
-      "\tat java.net.URLClassLoader.findClass(URLClassLoader.java:387)\n",
-      "\tat java.lang.ClassLoader.loadClass(ClassLoader.java:418)\n",
-      "\tat java.lang.ClassLoader.loadClass(ClassLoader.java:351)\n",
-      "\tat org.apache.spark.sql.execution.datasources.DataSource$.$anonfun$lookupDataSource$5(DataSource.scala:633)\n",
-      "\tat scala.util.Try$.apply(Try.scala:213)\n",
-      "\tat org.apache.spark.sql.execution.datasources.DataSource$.$anonfun$lookupDataSource$4(DataSource.scala:633)\n",
-      "\tat scala.util.Failure.orElse(Try.scala:224)\n",
-      "\tat org.apache.spark.sql.execution.datasources.DataSource$.lookupDataSource(DataSource.scala:633)\n",
-      "\t... 15 more\n",
-      "\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py\", line 2120, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1435, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1326, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1173, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1088, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(record))\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 970, in format_record\n",
-      "    frame_info.lines, Colors, self.has_colors, lvals\n",
-      "    ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 792, in lines\n",
-      "    return self._sd.lines\n",
-      "           ^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 734, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 677, in included_pieces\n",
-      "    scope_pieces = self.scope_pieces\n",
-      "                   ^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 614, in scope_pieces\n",
-      "    scope_start, scope_end = self.source.line_range(self.scope)\n",
-      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 178, in line_range\n",
-      "    return line_range(self.asttext(), node)\n",
-      "                      ^^^^^^^^^^^^\n",
-      "AttributeError: 'Source' object has no attribute 'asttext'\n"
+      "d:\\Anaconda\\Lib\\site-packages\\pyspark\\sql\\pandas\\conversion.py:485: FutureWarning: is_datetime64tz_dtype is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.DatetimeTZDtype)` instead.\n",
+      "  if should_localize and is_datetime64tz_dtype(s.dtype) and s.dt.tz is not None:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-------------+------------------------+----------------+----------------------+------------------------------------+---------------+--------------------+-------------+----------+-----+------------+---------------------------+--------------------+---------+-----------+-------------------+--------------+--------------+---------+--------+--------------+--------------------+\n",
+      "|          agent_name|city_of_birth|contract_expiration_date|country_of_birth|country_of_citizenship|current_club_domestic_competition_id|current_club_id|   current_club_name|date_of_birth|first_name| foot|height_in_cm|highest_market_value_in_eur|           image_url|last_name|last_season|market_value_in_eur|          name|   player_code|player_id|position|  sub_position|                 url|\n",
+      "+--------------------+-------------+------------------------+----------------+----------------------+------------------------------------+---------------+--------------------+-------------+----------+-----+------------+---------------------------+--------------------+---------+-----------+-------------------+--------------+--------------+---------+--------+--------------+--------------------+\n",
+      "|ASBW Sport Marketing|        Opole|                        |          Poland|               Germany|                                 IT1|            398|Società Sportiva ...|   1978-06-09|  Miroslav|right|         184|                   30000000|https://img.a.tra...|    Klose|       2015|            1000000|Miroslav Klose|miroslav-klose|       10|  Attack|Centre-Forward|https://www.trans...|\n",
+      "+--------------------+-------------+------------------------+----------------+----------------------+------------------------------------+---------------+--------------------+-------------+----------+-----+------------+---------------------------+--------------------+---------+-----------+-------------------+--------------+--------------+---------+--------+--------------+--------------------+\n",
+      "only showing top 1 row\n",
+      "\n"
      ]
     }
    ],
@@ -438,7 +352,9 @@
     "player_valuation_df=ss.createDataFrame(df)\n",
     "appearances_df = ss.read.csv(\"raw_data\\\\transfermarkt\\\\appearances.csv\", header=True, inferSchema=True)\n",
     "players_df = ss.read.option(\"multiline\",\"true\").json(\"raw_data\\\\transfermarkt\\\\players.json\")\n",
-    "players_df.show(1)"
+    "players_df.show(1)\n",
+    "\n",
+    "ss.stop()"
    ]
   },
   {
