added ignore future warnings

--- a/project.ipynb
+++ b/project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -26,6 +26,9 @@
     "from urllib.parse import quote_plus\n",
     "from pymongo.mongo_client import MongoClient\n",
     "from pymongo.server_api import ServerApi\n",
+    "import warnings\n",
+    "\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
     "username = quote_plus('common')\n",
     "password = quote_plus(os.environ.get('MONGODB_PASSWORD'))\n",
@@ -42,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,37 +316,15 @@
     "collection = db['players']\n",
     "res = collection.find()\n",
     "\n",
-    "df =  pd.DataFrame(list(res))\n",
+    "df = pd.DataFrame(list(res))\n",
     "df.drop(\"_id\", axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Anaconda\\Lib\\site-packages\\pyspark\\sql\\pandas\\conversion.py:485: FutureWarning: is_datetime64tz_dtype is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.DatetimeTZDtype)` instead.\n",
-      "  if should_localize and is_datetime64tz_dtype(s.dtype) and s.dt.tz is not None:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+-------------+------------------------+----------------+----------------------+------------------------------------+---------------+--------------------+-------------+----------+-----+------------+---------------------------+--------------------+---------+-----------+-------------------+--------------+--------------+---------+--------+--------------+--------------------+\n",
-      "|          agent_name|city_of_birth|contract_expiration_date|country_of_birth|country_of_citizenship|current_club_domestic_competition_id|current_club_id|   current_club_name|date_of_birth|first_name| foot|height_in_cm|highest_market_value_in_eur|           image_url|last_name|last_season|market_value_in_eur|          name|   player_code|player_id|position|  sub_position|                 url|\n",
-      "+--------------------+-------------+------------------------+----------------+----------------------+------------------------------------+---------------+--------------------+-------------+----------+-----+------------+---------------------------+--------------------+---------+-----------+-------------------+--------------+--------------+---------+--------+--------------+--------------------+\n",
-      "|ASBW Sport Marketing|        Opole|                        |          Poland|               Germany|                                 IT1|            398|Società Sportiva ...|   1978-06-09|  Miroslav|right|         184|                   30000000|https://img.a.tra...|    Klose|       2015|            1000000|Miroslav Klose|miroslav-klose|       10|  Attack|Centre-Forward|https://www.trans...|\n",
-      "+--------------------+-------------+------------------------+----------------+----------------------+------------------------------------+---------------+--------------------+-------------+----------+-----+------------+---------------------------+--------------------+---------+-----------+-------------------+--------------+--------------+---------+--------+--------------+--------------------+\n",
-      "only showing top 1 row\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
@@ -352,7 +333,6 @@
     "player_valuation_df=ss.createDataFrame(df)\n",
     "appearances_df = ss.read.csv(\"raw_data\\\\transfermarkt\\\\appearances.csv\", header=True, inferSchema=True)\n",
     "players_df = ss.read.option(\"multiline\",\"true\").json(\"raw_data\\\\transfermarkt\\\\players.json\")\n",
-    "players_df.show(1)\n",
     "\n",
     "ss.stop()"
    ]
@@ -366,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
