--- a/project.ipynb
+++ b/project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,253 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Player found: {\n",
-      "    \"_id\": \"65a01328c758554bfe6e0d2f\",\n",
-      "    \"player_id\": 10,\n",
-      "    \"first_name\": \"Miroslav\",\n",
-      "    \"last_name\": \"Klose\",\n",
-      "    \"name\": \"Miroslav Klose\",\n",
-      "    \"last_season\": 2015,\n",
-      "    \"current_club_id\": 398,\n",
-      "    \"player_code\": \"miroslav-klose\",\n",
-      "    \"country_of_birth\": \"Poland\",\n",
-      "    \"city_of_birth\": \"Opole\",\n",
-      "    \"country_of_citizenship\": \"Germany\",\n",
-      "    \"date_of_birth\": \"1978-06-09\",\n",
-      "    \"sub_position\": \"Centre-Forward\",\n",
-      "    \"position\": \"Attack\",\n",
-      "    \"foot\": \"right\",\n",
-      "    \"height_in_cm\": 184.0,\n",
-      "    \"contract_expiration_date\": NaN,\n",
-      "    \"agent_name\": \"ASBW Sport Marketing\",\n",
-      "    \"image_url\": \"https://img.a.transfermarkt.technology/portrait/header/10-1448468291.jpg?lm=1\",\n",
-      "    \"url\": \"https://www.transfermarkt.co.uk/miroslav-klose/profil/spieler/10\",\n",
-      "    \"current_club_domestic_competition_id\": \"IT1\",\n",
-      "    \"current_club_name\": \"Societ\\u00e0 Sportiva Lazio S.p.A.\",\n",
-      "    \"market_value_in_eur\": 1000000.0,\n",
-      "    \"highest_market_value_in_eur\": 30000000.0,\n",
-      "    \"valuations\": [\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2004-10-04\",\n",
-      "            \"datetime\": \"2004-10-04 00:00:00\",\n",
-      "            \"dateweek\": \"2004-10-04\",\n",
-      "            \"market_value_in_eur\": 7000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2005-01-07\",\n",
-      "            \"datetime\": \"2005-01-07 00:00:00\",\n",
-      "            \"dateweek\": \"2005-01-03\",\n",
-      "            \"market_value_in_eur\": 9000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2005-05-05\",\n",
-      "            \"datetime\": \"2005-05-05 00:00:00\",\n",
-      "            \"dateweek\": \"2005-05-02\",\n",
-      "            \"market_value_in_eur\": 12000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2005-09-30\",\n",
-      "            \"datetime\": \"2005-09-30 00:00:00\",\n",
-      "            \"dateweek\": \"2005-09-26\",\n",
-      "            \"market_value_in_eur\": 15000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2006-01-09\",\n",
-      "            \"datetime\": \"2006-01-09 00:00:00\",\n",
-      "            \"dateweek\": \"2006-01-09\",\n",
-      "            \"market_value_in_eur\": 20000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2006-07-15\",\n",
-      "            \"datetime\": \"2006-07-15 00:00:00\",\n",
-      "            \"dateweek\": \"2006-07-10\",\n",
-      "            \"market_value_in_eur\": 30000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2007-06-21\",\n",
-      "            \"datetime\": \"2007-06-21 00:00:00\",\n",
-      "            \"dateweek\": \"2007-06-18\",\n",
-      "            \"market_value_in_eur\": 23000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2008-06-04\",\n",
-      "            \"datetime\": \"2008-06-04 00:00:00\",\n",
-      "            \"dateweek\": \"2008-06-02\",\n",
-      "            \"market_value_in_eur\": 20000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2009-06-10\",\n",
-      "            \"datetime\": \"2009-06-10 00:00:00\",\n",
-      "            \"dateweek\": \"2009-06-08\",\n",
-      "            \"market_value_in_eur\": 18000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2009-08-30\",\n",
-      "            \"datetime\": \"2009-08-30 00:00:00\",\n",
-      "            \"dateweek\": \"2009-08-24\",\n",
-      "            \"market_value_in_eur\": 12000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2010-01-17\",\n",
-      "            \"datetime\": \"2010-01-17 00:00:00\",\n",
-      "            \"dateweek\": \"2010-01-11\",\n",
-      "            \"market_value_in_eur\": 9000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2010-05-08\",\n",
-      "            \"datetime\": \"2010-05-08 00:00:00\",\n",
-      "            \"dateweek\": \"2010-05-03\",\n",
-      "            \"market_value_in_eur\": 7500000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2011-01-12\",\n",
-      "            \"datetime\": \"2011-01-12 00:00:00\",\n",
-      "            \"dateweek\": \"2011-01-10\",\n",
-      "            \"market_value_in_eur\": 7000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2011-06-29\",\n",
-      "            \"datetime\": \"2011-06-29 00:00:00\",\n",
-      "            \"dateweek\": \"2011-06-27\",\n",
-      "            \"market_value_in_eur\": 5000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2012-01-11\",\n",
-      "            \"datetime\": \"2012-01-11 00:00:00\",\n",
-      "            \"dateweek\": \"2012-01-09\",\n",
-      "            \"market_value_in_eur\": 6000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2012-07-03\",\n",
-      "            \"datetime\": \"2012-07-03 00:00:00\",\n",
-      "            \"dateweek\": \"2012-07-02\",\n",
-      "            \"market_value_in_eur\": 6000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2013-01-14\",\n",
-      "            \"datetime\": \"2013-01-14 00:00:00\",\n",
-      "            \"dateweek\": \"2013-01-14\",\n",
-      "            \"market_value_in_eur\": 4000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2013-06-19\",\n",
-      "            \"datetime\": \"2013-06-19 00:00:00\",\n",
-      "            \"dateweek\": \"2013-06-17\",\n",
-      "            \"market_value_in_eur\": 2000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2014-01-07\",\n",
-      "            \"datetime\": \"2014-01-07 00:00:00\",\n",
-      "            \"dateweek\": \"2014-01-06\",\n",
-      "            \"market_value_in_eur\": 1000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2014-07-07\",\n",
-      "            \"datetime\": \"2014-07-07 00:00:00\",\n",
-      "            \"dateweek\": \"2014-07-07\",\n",
-      "            \"market_value_in_eur\": 1000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2015-01-07\",\n",
-      "            \"datetime\": \"2015-01-07 00:00:00\",\n",
-      "            \"dateweek\": \"2015-01-05\",\n",
-      "            \"market_value_in_eur\": 1000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2015-07-01\",\n",
-      "            \"datetime\": \"2015-07-01 00:00:00\",\n",
-      "            \"dateweek\": \"2015-06-29\",\n",
-      "            \"market_value_in_eur\": 1000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"player_id\": 10,\n",
-      "            \"date\": \"2016-01-04\",\n",
-      "            \"datetime\": \"2016-01-04 00:00:00\",\n",
-      "            \"dateweek\": \"2016-01-04\",\n",
-      "            \"market_value_in_eur\": 1000000,\n",
-      "            \"current_club_id\": 398,\n",
-      "            \"player_club_domestic_competition_id\": \"IT1\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'import json\\n\\ndb = client[\\'player_valuations\\']\\ncollection = db[\\'players\\']\\nplayer = collection.find_one({\\'player_id\\': 10})\\n\\n# Print the result\\nif player:\\n    print(\"Player found:\", json.dumps(player, indent=4, default=str))\\nelse:\\n    print(\"No player found with player_id\", 65)'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import json\n",
+    "\"\"\"import json\n",
     "\n",
     "db = client['player_valuations']\n",
     "collection = db['players']\n",
@@ -301,16 +70,17 @@
     "if player:\n",
     "    print(\"Player found:\", json.dumps(player, indent=4, default=str))\n",
     "else:\n",
-    "    print(\"No player found with player_id\", 65)"
+    "    print(\"No player found with player_id\", 65)\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from pyspark.sql.types import StructType, StructField, ArrayType, MapType, StringType, IntegerType, DoubleType\n",
     "\n",
     "db = client['player_valuations']\n",
     "collection = db['players']\n",
@@ -322,7 +92,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = StructType([\n",
+    "    StructField(\"player_id\", IntegerType(), True),\n",
+    "    StructField(\"first_name\", StringType(), True),\n",
+    "    StructField(\"last_name\", StringType(), True),\n",
+    "    StructField(\"name\", StringType(), True),\n",
+    "    StructField(\"last_season\", IntegerType(), True),\n",
+    "    StructField(\"current_club_id\", IntegerType(), True),\n",
+    "    StructField(\"player_code\", StringType(), True),\n",
+    "    StructField(\"country_of_birth\", StringType(), True),\n",
+    "    StructField(\"city_of_birth\", StringType(), True),\n",
+    "    StructField(\"country_of_citizenship\", StringType(), True),\n",
+    "    StructField(\"date_of_birth\", StringType(), True),\n",
+    "    StructField(\"sub_position\", StringType(), True),\n",
+    "    StructField(\"position\", StringType(), True),\n",
+    "    StructField(\"foot\", StringType(), True),\n",
+    "    StructField(\"height_in_cm\", DoubleType(), True),\n",
+    "    StructField(\"contract_expiration_date\", StringType(), True),\n",
+    "    StructField(\"agent_name\", StringType(), True),\n",
+    "    StructField(\"image_url\", StringType(), True),\n",
+    "    StructField(\"url\", StringType(), True),\n",
+    "    StructField(\"current_club_domestic_competition_id\", StringType(), True),\n",
+    "    StructField(\"current_club_name\", StringType(), True),\n",
+    "    StructField(\"market_value_in_eur\", DoubleType(), True),\n",
+    "    StructField(\"highest_market_value_in_eur\", DoubleType(), True),\n",
+    "    StructField(\"valuations\", ArrayType(StructType([\n",
+    "        StructField(\"player_id\", IntegerType(), True),\n",
+    "        StructField(\"date\", StringType(), True),\n",
+    "        StructField(\"datetime\", StringType(), True),\n",
+    "        StructField(\"dateweek\", StringType(), True),\n",
+    "        StructField(\"market_value_in_eur\", IntegerType(), True),\n",
+    "        StructField(\"current_club_id\", IntegerType(), True),\n",
+    "        StructField(\"player_club_domestic_competition_id\", StringType(), True),\n",
+    "    ]), True), True),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Starting a spark session and extracting the raw data into dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,27 +149,99 @@
     "\n",
     "ss = SparkSession.builder.master(\"local[*]\").getOrCreate()\n",
     "\n",
-    "player_valuation_df=ss.createDataFrame(df)\n",
+    "player_valuation_df=ss.createDataFrame(df, schema = schema)\n",
     "appearances_df = ss.read.csv(\"raw_data\\\\transfermarkt\\\\appearances.csv\", header=True, inferSchema=True)\n",
-    "players_df = ss.read.option(\"multiline\",\"true\").json(\"raw_data\\\\transfermarkt\\\\players.json\")\n",
-    "\n",
-    "ss.stop()"
+    "games_df = ss.read.option(\"multiline\",\"true\").json(\"raw_data\\\\transfermarkt\\\\games.json\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Close MongoDB client"
+    "# Some cleaning operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.close()"
+    "from pyspark.sql.functions import when\n",
+    "\n",
+    "player_valuation_df = player_valuation_df.drop(*[\"image_url\", \"url\", \"name\", \"player_code\"])\n",
+    "player_valuation_df = player_valuation_df.withColumns({\n",
+    "    \"current_club_id\": when(player_valuation_df[\"last_season\"] != 2023, -1).otherwise(player_valuation_df[\"current_club_id\"]),\n",
+    "    \"current_club_domestic_competition_id\": when(player_valuation_df[\"last_season\"] != 2023, \"-1\").otherwise(player_valuation_df[\"current_club_domestic_competition_id\"]),\n",
+    "    \"current_club_name\": when(player_valuation_df[\"last_season\"] != 2023, \"Retired\").otherwise(player_valuation_df[\"current_club_name\"]),\n",
+    "    \"market_value_in_eur\": when(player_valuation_df[\"last_season\"] != 2023, 0).otherwise(player_valuation_df[\"market_value_in_eur\"])\n",
+    "})\n",
+    "\n",
+    "games_df = games_df.drop(*[\"url\", \"aggregate\", \"home_club_formation\", \"away_club_formation\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Max market value player in 2023. If there are many with the same max value take them all."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+----------+-------------------+\n",
+      "|first_name| last_name|market_value_in_eur|\n",
+      "+----------+----------+-------------------+\n",
+      "|    Kylian|    Mbappé|          180000000|\n",
+      "|    Erling|   Haaland|          180000000|\n",
+      "|      Jude|Bellingham|          180000000|\n",
+      "+----------+----------+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import explode, col, expr\n",
+    "\n",
+    "valuations = player_valuation_df.select(\"valuations\")\n",
+    "flattened_valuations = valuations.select(explode(\"valuations\").alias(\"valuation\"))\n",
+    "valuations2023 = flattened_valuations.filter(\"substring(valuation.date, 1, 4) = '2023'\")\n",
+    "max_market_value_players_2023 = valuations2023\\\n",
+    "    .select(\"valuation.*\").groupBy(\"player_id\").max(\"market_value_in_eur\")\\\n",
+    "    .withColumnRenamed(\"max(market_value_in_eur)\", \"market_value_in_eur\")\\\n",
+    "    .join(player_valuation_df.select(\"player_id\", \"first_name\", \"last_name\"), on=\"player_id\", how=\"inner\")\\\n",
+    "    .orderBy('market_value_in_eur', ascending=False)\\\n",
+    "    .select(\"first_name\", \"last_name\", \"market_value_in_eur\")\n",
+    "\n",
+    "max_value = max_market_value_players_2023.select(\"market_value_in_eur\").first()[\"market_value_in_eur\"]\n",
+    "\n",
+    "max_value_players = max_market_value_players_2023.filter(col(\"market_value_in_eur\") == max_value)\n",
+    "\n",
+    "max_value_players.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Closing the MongoDB client and the spark session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"client.close()\n",
+    "ss.stop()\"\"\""
    ]
   },
   {
