added epl bookings example

--- a/project.ipynb
+++ b/project.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,8 @@
     "\n",
     "player_valuation_df=ss.createDataFrame(df, schema = schema)\n",
     "appearances_df = ss.read.csv(\"raw_data\\\\transfermarkt\\\\appearances.csv\", header=True, inferSchema=True)\n",
-    "games_df = ss.read.option(\"multiline\",\"true\").json(\"raw_data\\\\transfermarkt\\\\games.json\")"
+    "games_df = ss.read.option(\"multiline\",\"true\").json(\"raw_data\\\\transfermarkt\\\\games.json\")\n",
+    "game_events_df = ss.read.csv(\"raw_data\\\\transfermarkt\\\\game_events.csv\", header=True, inferSchema=True)"
    ]
   },
   {
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -225,6 +226,45 @@
     "max_value_players = max_market_value_players_2023.filter(col(\"market_value_in_eur\") == max_value)\n",
     "\n",
     "max_value_players.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EPL bookings exaample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+--------------------+--------------------+----------+--------------------+------+\n",
+      "|first_name|last_name|      home_club_name|      away_club_name|      date|         description|minute|\n",
+      "+----------+---------+--------------------+--------------------+----------+--------------------+------+\n",
+      "|    Gareth|    Barry|          Reading FC|Manchester City F...|2013-05-14|6. Yellow card  ,...|    37|\n",
+      "|       NaN|  Ramires| Queens Park Rangers|Chelsea Football ...|2012-09-15|1. Yellow card  ,...|    14|\n",
+      "|      Ryan| Bertrand| Queens Park Rangers|Chelsea Football ...|2012-09-15|1. Yellow card  ,...|    27|\n",
+      "|      Loïc|     Rémy|Newcastle United ...|Aston Villa Footb...|2014-02-23|2. Yellow card  ,...|    90|\n",
+      "|     Cheik|    Tioté|Newcastle United ...|Aston Villa Footb...|2014-02-23|6. Yellow card  ,...|    69|\n",
+      "+----------+---------+--------------------+--------------------+----------+--------------------+------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cards_Premier_League = games_df.join(game_events_df, on=\"game_id\", how=\"inner\")\\\n",
+    "    .join(player_valuation_df, on=\"player_id\", how=\"inner\")\\\n",
+    "    .filter((col(\"type\") == \"Cards\") & (col(\"competition_id\") == \"GB1\"))\\\n",
+    "    .select(player_valuation_df.first_name, player_valuation_df.last_name, games_df.home_club_name, games_df.away_club_name, games_df.date, game_events_df.description, game_events_df.minute)  \n",
+    "\n",
+    "cards_Premier_League.show(5)"
    ]
   },
   {
