Add club value queries

--- a/project.ipynb
+++ b/project.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -231,27 +231,134 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EPL bookings exaample"
+    "# Top 5 clubs by market value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+---------+--------------------+--------------------+----------+--------------------+------+\n",
-      "|first_name|last_name|      home_club_name|      away_club_name|      date|         description|minute|\n",
-      "+----------+---------+--------------------+--------------------+----------+--------------------+------+\n",
-      "|    Gareth|    Barry|          Reading FC|Manchester City F...|2013-05-14|6. Yellow card  ,...|    37|\n",
-      "|       NaN|  Ramires| Queens Park Rangers|Chelsea Football ...|2012-09-15|1. Yellow card  ,...|    14|\n",
-      "|      Ryan| Bertrand| Queens Park Rangers|Chelsea Football ...|2012-09-15|1. Yellow card  ,...|    27|\n",
-      "|      Loïc|     Rémy|Newcastle United ...|Aston Villa Footb...|2014-02-23|2. Yellow card  ,...|    90|\n",
-      "|     Cheik|    Tioté|Newcastle United ...|Aston Villa Footb...|2014-02-23|6. Yellow card  ,...|    69|\n",
-      "+----------+---------+--------------------+--------------------+----------+--------------------+------+\n",
+      "+---------------+--------------------+-------------------------+\n",
+      "|current_club_id|   current_club_name|total_market_value_in_eur|\n",
+      "+---------------+--------------------+-------------------------+\n",
+      "|            281|Manchester City F...|               1323700000|\n",
+      "|             11|Arsenal Football ...|               1166000000|\n",
+      "|            583|Paris Saint-Germa...|               1138800000|\n",
+      "|            418|Real Madrid Club ...|               1105000000|\n",
+      "|            631|Chelsea Football ...|               1099300000|\n",
+      "+---------------+--------------------+-------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import sum as _sum\n",
+    "\n",
+    "# Extract 2023 valuations and aggregate market values by player and club.\n",
+    "player_club_valuations_2023 = valuations2023\\\n",
+    "    .select(\"valuation.*\")\\\n",
+    "    .groupBy(\"player_id\", \"current_club_id\")\\\n",
+    "    .max(\"market_value_in_eur\")\\\n",
+    "    .withColumnRenamed(\"max(market_value_in_eur)\", \"market_value_in_eur\")\n",
+    "\n",
+    "# Join with player_valuation_df to get club names\n",
+    "player_club_valuations_2023 = player_club_valuations_2023\\\n",
+    "    .join(player_valuation_df.select(\"player_id\", \"current_club_id\", \"current_club_name\"), \n",
+    "          on=[\"player_id\", \"current_club_id\"], \n",
+    "          how=\"inner\")\n",
+    "\n",
+    "# Create a new dataframe that gives the total market value of all players for each club in 2023.\n",
+    "club_market_values_2023 = player_club_valuations_2023\\\n",
+    "    .groupBy(\"current_club_id\", \"current_club_name\")\\\n",
+    "    .agg(_sum(\"market_value_in_eur\").alias(\"total_market_value_in_eur\"))\n",
+    "\n",
+    "# Display the top 5 clubs with the highest total player market value in 2023.\n",
+    "top_clubs_by_market_value_2023 = club_market_values_2023\\\n",
+    "    .orderBy('total_market_value_in_eur', ascending=False)\\\n",
+    "    .limit(5)\n",
+    "\n",
+    "top_clubs_by_market_value_2023.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Number of clubs that hold the top 1% players in value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of clubs holding the top 1% players:  39\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import countDistinct\n",
+    "\n",
+    "max_valuations2023 = valuations2023\\\n",
+    "    .select(\"valuation.player_id\", \"valuation.market_value_in_eur\", \"valuation.current_club_id\")\\\n",
+    "    .groupBy(\"player_id\").agg({\"market_value_in_eur\": \"max\", \"current_club_id\": \"first\"})\\\n",
+    "    .withColumnRenamed(\"max(market_value_in_eur)\", \"max_market_value_in_eur\")\\\n",
+    "    .withColumnRenamed(\"first(current_club_id)\", \"current_club_id\")\n",
+    "\n",
+    "# Total players in 2023\n",
+    "total_players_2023 = valuations2023.select(\"valuation.player_id\").distinct().count()\n",
+    "\n",
+    "# Calculate 1% of total players\n",
+    "top_1_percent = int(total_players_2023 * 0.01)\n",
+    "\n",
+    "# Get the top 1% players based on market value\n",
+    "top_1_percent_players = max_valuations2023\\\n",
+    "    .orderBy('max_market_value_in_eur', ascending=False)\\\n",
+    "    .limit(top_1_percent)\n",
+    "\n",
+    "# Clubs holding top 1% players\n",
+    "clubs_holding_top_1_percent_players = top_1_percent_players.select(\"current_club_id\").distinct()\n",
+    "\n",
+    "# Number of clubs holding top 1% players\n",
+    "num_clubs_holding_top_1_percent_players = clubs_holding_top_1_percent_players.count()\n",
+    "\n",
+    "print(\"Number of clubs holding the top 1% players: \", num_clubs_holding_top_1_percent_players)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EPL bookings exaample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+----------+--------------------+--------------------+----------+--------------------+------+\n",
+      "|first_name| last_name|      home_club_name|      away_club_name|      date|         description|minute|\n",
+      "+----------+----------+--------------------+--------------------+----------+--------------------+------+\n",
+      "|      Juan|      Cala|Tottenham Hotspur...|        Cardiff City|2014-03-02|1. Yellow card  ,...|    90|\n",
+      "|       NaN|Diogo Jota|Tottenham Hotspur...|Liverpool Footbal...|2023-09-30|Second yellow  , ...|    69|\n",
+      "|       NaN|Diogo Jota|Tottenham Hotspur...|Liverpool Footbal...|2023-09-30| Yellow card  , Foul|    68|\n",
+      "|      Juan|      Cala|        Cardiff City|Liverpool Footbal...|2014-03-22|2. Yellow card  ,...|    33|\n",
+      "|      Juan|      Cala|      Sunderland AFC|        Cardiff City|2014-04-27|Red card  , Profe...|    45|\n",
+      "+----------+----------+--------------------+--------------------+----------+--------------------+------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -275,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +456,7 @@
        "'client.close()\\nss.stop()'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
