added order by date in the bookings table

--- a/project.ipynb
+++ b/project.ipynb
@@ -236,22 +236,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------------+--------------------+-------------------------+\n",
-      "|current_club_id|   current_club_name|total_market_value_in_eur|\n",
-      "+---------------+--------------------+-------------------------+\n",
-      "|            281|Manchester City F...|               1323700000|\n",
-      "|             11|Arsenal Football ...|               1166000000|\n",
-      "|            583|Paris Saint-Germa...|               1138800000|\n",
-      "|            418|Real Madrid Club ...|               1105000000|\n",
-      "|            631|Chelsea Football ...|               1099300000|\n",
-      "+---------------+--------------------+-------------------------+\n",
+      "+---------------+---------------------------------+-------------------------+\n",
+      "|current_club_id|current_club_name                |total_market_value_in_eur|\n",
+      "+---------------+---------------------------------+-------------------------+\n",
+      "|281            |Manchester City Football Club    |1323700000               |\n",
+      "|11             |Arsenal Football Club            |1166000000               |\n",
+      "|583            |Paris Saint-Germain Football Club|1138800000               |\n",
+      "|418            |Real Madrid Club de Fútbol       |1105000000               |\n",
+      "|631            |Chelsea Football Club            |1099300000               |\n",
+      "+---------------+---------------------------------+-------------------------+\n",
       "\n"
      ]
     }
@@ -282,7 +282,7 @@
     "    .orderBy('total_market_value_in_eur', ascending=False)\\\n",
     "    .limit(5)\n",
     "\n",
-    "top_clubs_by_market_value_2023.show()"
+    "top_clubs_by_market_value_2023.show(truncate=False)"
    ]
   },
   {
@@ -294,14 +294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of clubs holding the top 1% players:  39\n"
+      "Number of clubs holding the top 1% players:  38\n"
      ]
     }
    ],
@@ -343,22 +343,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+----------+--------------------+--------------------+----------+--------------------+------+\n",
-      "|first_name| last_name|      home_club_name|      away_club_name|      date|         description|minute|\n",
-      "+----------+----------+--------------------+--------------------+----------+--------------------+------+\n",
-      "|      Juan|      Cala|Tottenham Hotspur...|        Cardiff City|2014-03-02|1. Yellow card  ,...|    90|\n",
-      "|       NaN|Diogo Jota|Tottenham Hotspur...|Liverpool Footbal...|2023-09-30|Second yellow  , ...|    69|\n",
-      "|       NaN|Diogo Jota|Tottenham Hotspur...|Liverpool Footbal...|2023-09-30| Yellow card  , Foul|    68|\n",
-      "|      Juan|      Cala|        Cardiff City|Liverpool Footbal...|2014-03-22|2. Yellow card  ,...|    33|\n",
-      "|      Juan|      Cala|      Sunderland AFC|        Cardiff City|2014-04-27|Red card  , Profe...|    45|\n",
-      "+----------+----------+--------------------+--------------------+----------+--------------------+------+\n",
+      "+----------+---------+-------------------+--------------+----------+------------------------------+------+\n",
+      "|first_name|last_name|home_club_name     |away_club_name|date      |description                   |minute|\n",
+      "+----------+---------+-------------------+--------------+----------+------------------------------+------+\n",
+      "|Jonathan  |de Guzmán|Queens Park Rangers|Swansea City  |2012-08-18|1. Yellow card  , Foul        |41    |\n",
+      "|Dean      |Whitehead|Reading FC         |Stoke City    |2012-08-18|Second yellow  , Foul         |88    |\n",
+      "|Ryan      |Shawcross|Reading FC         |Stoke City    |2012-08-18|1. Yellow card  , Foul        |90    |\n",
+      "|Samba     |Diakité  |Queens Park Rangers|Swansea City  |2012-08-18|1. Yellow card  , Foul        |55    |\n",
+      "|Asmir     |Begovic  |Reading FC         |Stoke City    |2012-08-18|1. Yellow card  , Time wasting|90    |\n",
+      "+----------+---------+-------------------+--------------+----------+------------------------------+------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -368,9 +368,10 @@
     "cards_Premier_League = games_df.join(game_events_df, on=\"game_id\", how=\"inner\")\\\n",
     "    .join(player_valuation_df, on=\"player_id\", how=\"inner\")\\\n",
     "    .filter((col(\"type\") == \"Cards\") & (col(\"competition_id\") == \"GB1\"))\\\n",
+    "    .orderBy(games_df.date)\\\n",
     "    .select(player_valuation_df.first_name, player_valuation_df.last_name, games_df.home_club_name, games_df.away_club_name, games_df.date, game_events_df.description, game_events_df.minute)  \n",
     "\n",
-    "cards_Premier_League.show(5)"
+    "cards_Premier_League.show(5, truncate=False)"
    ]
   },
   {
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -431,9 +432,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py\", line 3526, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Local\\Temp\\ipykernel_408\\1385738950.py\", line 1, in <module>\n",
+      "    cards_Premier_League.write.mode(\"overwrite\").parquet(\"raw_data\\\\transfermarkt\\\\epl_bookings\")\n",
+      "    ^^^^^^^^^^^^^^^^^^^^\n",
+      "NameError: name 'cards_Premier_League' is not defined\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py\", line 2120, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1435, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1326, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1173, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 1088, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 970, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\ultratb.py\", line 792, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 734, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 677, in included_pieces\n",
+      "    scope_pieces = self.scope_pieces\n",
+      "                   ^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 614, in scope_pieces\n",
+      "    scope_start, scope_end = self.source.line_range(self.scope)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\stoya\\AppData\\Roaming\\Python\\Python311\\site-packages\\stack_data\\core.py\", line 178, in line_range\n",
+      "    return line_range(self.asttext(), node)\n",
+      "                      ^^^^^^^^^^^^\n",
+      "AttributeError: 'Source' object has no attribute 'asttext'\n"
+     ]
+    }
+   ],
    "source": [
     "cards_Premier_League.write.mode(\"overwrite\").parquet(\"raw_data\\\\transfermarkt\\\\epl_bookings\")"
    ]
@@ -447,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +525,7 @@
        "'client.close()\\nss.stop()'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
